feat(add): added postgres and list endpoint
